<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLocationUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:background="@color/teal_700"
        android:text="@string/string_open_location"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/btnShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:background="@color/teal_700"
        android:text="@string/string_share_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <Button
        android:id="@+id/btnWebsiteUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:background="@color/teal_700"
        android:text="@string/string_open_browser"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/edtWebsiteUri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/string_masukkan_url"
        android:inputType="textUri"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/edtLocationUri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/string_buka_lokasi"
        android:inputType="textUri"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/edtShareText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/string_masukkan_text"
        android:inputType="textUri"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/string_nomer_telphone"
        android:inputType="textUri"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/btnPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        android:background="@color/teal_700"
        android:text="@string/string_open_nomer"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold"
        android:onClick="openDialPhone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

</androidx.constraintlayout.widget.ConstraintLayout>